# sentimental_gpt

./: DEVELOPER_GUIDE.md  LICENSE  METHODOLOGY_ANALYSIS.md  PROJECT_CLOSING_STATEMENT.md  README.md  SentinelGPT.docx  generate_dataset_112985.ipynb  generate_dataset_22401.ipynb  plan_outline.md
code/: augment_data.py  build_dataset.py  clean_script.py  explore_data.ipynb  load_merge.py  model_split_merge.md  notebook.ipynb  pyproject.toml  save_split.py  scan_prompt.py  sentinel_augmented_data.csv  sentinel_training_data.csv  train_sentinel.py
code/model_parts/tensors/: bert.embeddings.LayerNorm.bias.pt  bert.embeddings.LayerNorm.weight.pt  bert.embeddings.position_embeddings.weight.pt  bert.transformer.layer.0.attention.k_lin.bias.pt  bert.transformer.layer.0.attention.k_lin.weight.pt  bert.transformer.layer.0.attention.out_lin.bias.pt  bert.transformer.layer.0.attention.out_lin.weight.pt  bert.transformer.layer.0.attention.q_lin.bias.pt  bert.transformer.layer.0.attention.q_lin.weight.pt  bert.transformer.layer.0.attention.v_lin.bias.pt  bert.transformer.layer.0.attention.v_lin.weight.pt  bert.transformer.layer.0.ffn.lin1.bias.pt  bert.transformer.layer.0.ffn.lin2.bias.pt  bert.transformer.layer.0.output_layer_norm.bias.pt  bert.transformer.layer.0.output_layer_norm.weight.pt  bert.transformer.layer.0.sa_layer_norm.bias.pt  bert.transformer.layer.0.sa_layer_norm.weight.pt  bert.transformer.layer.1.attention.k_lin.bias.pt  bert.transformer.layer.1.attention.k_lin.weight.pt  bert.transformer.layer.1.attention.out_lin.bias.pt  bert.transformer.layer.1.ffn.lin1.bias.pt  (+78 more)
(+68 files in other folders)
